--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,6 @@ services:
       POSTGRES_DB: postgres
     ports:
       - "5432:5432"
+    volumes: 
+      - ./docker/setup.sql:/docker-entrypoint-initdb.d/init.sql
     
