--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "Este projeto é uma API simples criada com Node.js.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --env-file .env --watch server.ts",
+    "test1": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --env-file .env --watch src/server.ts",
+    "db:seed": "node --env-file .env src/database/seed.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "pretest": "dotenv -e .env.test drizzle-kit migrate",
+    "test": "dotenv -e .env.test vitest run --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
     "@scalar/fastify-api-reference": "^1.34.2",
+    "@types/supertest": "^6.0.3",
+    "D": "^1.0.0",
     "drizzle-orm": "^0.44.4",
     "fastify": "^5.5.0",
     "fastify-type-provider-zod": "^5.0.3",
@@ -25,9 +31,14 @@
     "zod": "^4.0.17"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@types/node": "^24.2.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
-    "typescript": "^5.9.2"
+    "supertest": "^7.1.4",
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   },
   "type": "module"
 }
