antes do deploy

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+NODE_ENV="development"
 DATABASE_URL="postgressql://postgres:postgres@localhost:5432/postgres"
+JWT_SECRET="lYcRP2TbJCUB5xNlDXhcGohH7XNDAjhW"
