--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "pino-pretty": "^13.1.1",
-    "zod": "^4.0.17"
+    "zod": "^4.0.17",
+    "drizzle-kit": "^0.31.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
